Mon Jul 18 00:00:46 2011  Shugo Maeda  <shugo@ruby-lang.org>

	* ext/curses/curses.c: added the new class Curses::Pad, which
	  supports scrolling.  patch by Eric Hodel.  [Feature #4896]
	  [ruby-core:37206]

Sun Jul 17 16:26:40 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (rb_check_trusted): new function to check an object is
	  trusted.

	* struct.c (rb_struct_modify), time.c (time_modify): check by the
	  above function to show proper class names.  [Bug #5036]

Sun Jul 17 15:30:04 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (rb_warn_m): accept multiple args in like puts.  rdoc
	  patch by Erik Price at [ruby-core:38119].  [Feature #5029]

Sun Jul 17 07:56:31 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* test/openssl/test_ssl_session.rb: add PEM SSL session without TLS
	  extensions. Use this as the default for the tests to ensure
	  compatibility with OpenSSL 0.9.7.
	  [ Ruby 1.9 - Bug #4961 ] [ruby-core:37726]

Sat Jul 16 17:29:20 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_UNIVERSAL_ARCH): restore arch flag.
	  Bug #4977

Sat Jul 16 06:27:51 2011  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/uri/common.rb (module): Remove optional parser argument to
	  Kernel#URI
	  [ruby-core:38061]
	
	* lib/uri/generic.rb (module): ditto

Sat Jul 16 03:19:45 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (is_socket, is_console): add prototypes to fix compile
	  problem with gcc introduced at r32549.
	  reported by Jon Forums. [Bug #5030] [ruby-core:38079]

Sat Jul 16 00:55:38 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* time.c (time_dup): used rb_obj_class() instead of CLASS_OF().
	  The patch is made by Kazuki Tsujimoto. [Bug #5012] [ruby-dev:44071]

	* test/ruby/test_time.rb (TestTime#test_getlocal_dont_share_eigenclass):
	  added a new test for eigenclass of time object.

Fri Jul 15 19:11:00 2011  Kenta Murata  <mrkn@mrkn.jp>
